[package]
name = "mrpcs"
version = "0.1.0"
authors = ["nyradr <nyradr@protonmail.com>"]
licence = "GPL-3.0"
description = "Simple management of multiple RPCs servers"

[dependencies]


[[example]]
name="singleudp"
path="examples/singleudp.rs"
test=false
bench=false

[[example]]
name="singleudp_clb"
path="examples/singleudp_clb.rs"
test=false
bench=false
